syntax = "proto3";

package xlnrpc;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/xbit-gg/xln/xlnrpc";

service Xln {
    /*
    Get general info about XLN
     */
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

    rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse);

    rpc DeleteWallet(DeleteWalletRequest) returns (DeleteWalletResponse);

    rpc UpdateWalletOptions(UpdateWalletOptionsRequest) returns (UpdateWalletOptionsResponse);

    rpc ListWallets(ListWalletsRequest) returns (ListWalletsResponse);

    rpc GetWallet(GetWalletRequest) returns (GetWalletResponse);

    rpc ListWalletTransactions(ListWalletTransactionsRequest) returns (ListWalletTransactionsResponse);

    rpc GetWalletTransaction(GetWalletTransactionRequest) returns (GetWalletTransactionResponse);

    rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse);

    rpc ListWalletInvoices(ListWalletInvoicesRequest) returns (ListWalletInvoicesResponse);

    rpc GetWalletInvoice(GetWalletInvoiceRequest) returns (GetWalletInvoiceResponse);

    rpc PayInvoice(PayInvoiceRequest) returns (PayInvoiceResponse);

    rpc PayInvoiceSync(PayInvoiceRequest) returns (PayInvoiceSyncResponse);

    rpc ListWalletPendingInvoices(ListWalletPendingInvoicesRequest) returns (ListWalletPendingInvoicesResponse);

    rpc ListWalletPendingPayments(ListWalletPendingPaymentsRequest) returns (ListWalletPendingPaymentsResponse);

    rpc Transfer(TransferRequest) returns (TransferResponse);
    
    rpc ListUserTransactions(ListUserTransactionsRequest) returns (ListUserTransactionsResponse);

    rpc Validate(ValidateRequest) returns (ValidateResponse);

    rpc GetUser(GetUserRequest) returns (GetUserResponse);

    rpc UserLinkWallet(UserLinkWalletRequest) returns (UserLinkWalletResponse);

    rpc LinkWallet(LinkWalletRequest) returns (LinkWalletResponse);

    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);

    rpc WalletLogin(WalletLoginRequest) returns (WalletLoginResponse);

    rpc LoginStatus(LoginStatusRequest) returns (LoginStatusResponse);

    rpc CreateLNURLW(CreateLNURLWRequest) returns (CreateLNURLWResponse);

    rpc GetLNURLW(GetLNURLWRequest) returns (GetLNURLWResponse);
}

message GetInfoRequest {
    string api_key = 1;
}

message GetInfoResponse {
    string version = 1;
    message IdentityType {
        // true if admin and all other fields are empty; false otherwise
        bool admin = 1;
        // if nonempty then the key belongs a user and returns the username;
        // otherwise the key does not belong to a wallet.
        string user = 2;
        // if nonempty then the key belongs to a wallet and returns the wallet id;
        // otherwise the key does not belong to a wallet.
        string wallet = 3;
    }
    IdentityType identity = 2;

}

message CreateWalletRequest {
    // autogenerated as a uuid if unspecified
    string wallet_id = 1;
    // set to wallet id if unspecified
    string wallet_name = 2;
}

message CreateWalletResponse {
    string wallet_id = 1;
    string wallet_name = 2;
    string api_key = 3;
}

message DeleteWalletRequest {
    string wallet_id = 1;
}

message DeleteWalletResponse {}

message UpdateWalletOptionsRequest {
    string wallet_id = 1;
    // updatable options
    string wallet_name = 2;
    bool lock = 3;
    bool unlock = 4;
}

message UpdateWalletOptionsResponse {}

message ListWalletsRequest {
    bool data = 1;
}

message ListWalletsResponse {
    repeated string wallet_ids = 1;
    repeated Wallet data = 2;
}

message GetWalletRequest {
    string wallet_id = 1;
}

message GetWalletResponse {
    string wallet_id = 1;
    string wallet_name = 2;
    uint64 balance = 3;
    google.protobuf.Timestamp creation_time = 4;
    bool locked = 5;
    Transaction latest_transaction = 6;
    string link_key = 7;
    string link_label = 8;
    string api_key = 9;
}

message ListWalletTransactionsRequest {
    string wallet_id = 1;
    // if not specified then records will be retrieved form the earliest time possible
    google.protobuf.Timestamp from_time = 2;
    // if unspecificed then records will be retrieved from the current time
    google.protobuf.Timestamp to_time = 3;
    // by default records are not limited (when set to 0)
    uint32 limit = 4;
    // by default, the transaction records are returned chronollogically by creation time
    bool descending = 5;
    // by default, the record offset is 0 (no records will be skipped)
    uint32 offset = 6;
}

message ListWalletTransactionsResponse {
    repeated Transaction transactions = 1;
    // If equal to 0, this means the request was not related to pagination;
    // If equal to -1 then there are no more matching records related to a pagination request;
    // If positive, then that is the next record index used in pagination.
    int32 next_offset = 2;
    // the total number of records that match the transaction query
    uint64 total_records = 3;
}

message GetWalletTransactionRequest {
    string wallet_id = 1;
    string tx_id = 2;
}

message GetWalletTransactionResponse {
    string id = 1;
    google.protobuf.Timestamp creation_time = 2;
    google.protobuf.Timestamp update_time = 3;
    string from = 4;
    string to = 5;
    string label = 6;
    uint64 amount = 7;
    uint64 fees_paid = 8;
    Invoice invoice = 9;
}

message CreateInvoiceRequest {
    string wallet_id = 1;
    string memo = 2;
    int64 value = 3;
    // Optional
    int64 expiry = 4;
}

message CreateInvoiceResponse {
    string payment_hash = 1;
    string payment_request = 2;
}

message ListWalletInvoicesRequest {
    string wallet_id = 1;
}

message ListWalletInvoicesResponse {
    repeated string invoices = 1;
}

message GetWalletInvoiceRequest {
    string wallet_id = 1;
    string payment_hash = 2;
}

message GetWalletInvoiceResponse {
    string payment_hash = 1;
    google.protobuf.Timestamp timestamp = 2;
    google.protobuf.Timestamp settled_at = 3;
    uint64 amount = 4;
    string pubkey = 5;
    string payment_request = 6;
    string recipient_id = 7;
    string recipient_username = 8;
    string sender_id = 9;
    string sender_username = 10;
    string memo = 11;
    string preimage = 12;
}

message PayInvoiceRequest {
    string wallet_id = 1;
    string payment_request = 2;
    // Optional
    uint64 amount = 3;
}

message PayInvoiceResponse {
    bool payment_initiated = 1;
}

message PayInvoiceSyncResponse {
    bool success = 1;
    uint64 amount = 2;
    uint64 fees_paid = 3;
    string failure_reason = 4;
}

message ListWalletPendingInvoicesRequest {
    string wallet_id = 1;
}

message WalletPendingInvoiceSummary {
    string payment_hash = 1;
    google.protobuf.Timestamp created_at = 2;
    uint64 amount = 3;
}

message ListWalletPendingInvoicesResponse {
    repeated WalletPendingInvoiceSummary pending_invoices = 1;
    uint64 total_amount = 2;
}

message ListWalletPendingPaymentsRequest {
    string wallet_id = 1;
}

message WalletPaymentSummary {
    string payment_hash = 1;
    google.protobuf.Timestamp created_at = 2;
    uint64 amount = 3;
}

message ListWalletPendingPaymentsResponse {
    repeated WalletPaymentSummary pending_payments = 1;
    uint64 total_amount = 2;
}

message TransferRequest {
    string wallet_id = 1;
    string to_wallet_id = 2;
    uint64 amount = 3;
}

message TransferResponse {
    bool success = 1;
    string failure_reason = 2;
    string transaction_id = 3;
}

message ListUserTransactionsRequest {
    // if not specified then records will be retrieved form the earliest time possible
    google.protobuf.Timestamp from_time = 1;
    // if unspecificed then records will be retrieved from the current time
    google.protobuf.Timestamp to_time = 2;
    // by default records are not limited (when set to 0)
    uint32 limit = 3;
    // by default, the transaction records are returned chronollogically by creation time
    bool descending = 4;
    // by default, the record offset is 0 (no records will be skipped)
    uint32 offset = 5;
}

message ListUserTransactionsResponse {
    repeated Transaction transactions = 1;
    // If equal to -1 then there are no more matching records;
    // If positive, then that is the next record index used in pagination.
    int32 next_offset = 2;
    // the total number of records that match the transaction query
    uint64 total_records = 3;
}

message GetUserRequest {}

message GetUserResponse {
    google.protobuf.Timestamp  created_at = 1;
    string link_key = 2;
    string link_label = 3;
    string api_key = 4;
}

message UserLinkWalletRequest {
    string label = 1; 
}

message UserLinkWalletResponse {
    string lnurl = 1;
}

message LinkWalletRequest {
    string wallet_id = 1;
    string label = 2;
}

message LinkWalletResponse {
    string lnurl = 1;
}

message UserLoginRequest {
    string username = 1;
}

message UserLoginResponse {
    string lnurl = 1;
}

message WalletLoginRequest {
    string username = 1;
    string wallet_id = 2;
}

message WalletLoginResponse {
    string lnurl = 1;
}

message LoginStatusRequest {
    string k1 = 1;
}

message LoginStatusResponse {
    string api_key = 1;
}

message Wallet {
    string id = 1;
    string name = 2;
    uint64 balance = 3;
    google.protobuf.Timestamp creation_time = 4;
}

message Transaction {
    string id = 1;
    google.protobuf.Timestamp time = 2;
    string from_wallet = 3;
    string from_user = 4;
    string to_wallet = 5;
    string to_user = 6;
    uint64 amount = 7;
    uint64 fees_paid = 8;
}

message Invoice {
    string payment_hash = 1;
    string pubkey = 2;
    string payment_request = 3;
    string memo = 4;
    uint64 amount = 5;
    string recipient_id = 6;
    string recipient_username = 7;
    string sender_id = 8;
    string sender_username = 9;
    google.protobuf.Timestamp time = 10;
}

message ValidateRequest {
    string username = 1;
    string wallet_id = 2;
    string wallet_name = 3;
}

message ValidateResponse {
    bool valid = 1;
    string reason = 2;
}

message LinkedAuth {
    string key = 1;
    string label = 2;
    google.protobuf.Timestamp created = 3;
}


message CreateLNURLWRequest{
    string wallet_id = 1;
    string description = 2;
    uint64 minMsats = 3;
    uint64 maxMsats = 4;
    uint32 maxReuses = 5;
    google.protobuf.Timestamp expire_at = 6;
  }
  
  message CreateLNURLWResponse{
    string url = 1;
  }
  
  message GetLNURLWRequest {
    string wallet_id = 1;
    string k1 = 2;
  }
  
  message GetLNURLWResponse {
    string url = 1;
  }